discussion/jgit/91227/91227_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Update name of InsecureCipherMode error-prone pattern

Without this, using bazel 0.4.4 to build fails:

 ERROR: jgit/org.eclipse.jgit/BUILD:29:1: Java compilation in rule '//org.eclipse.jgit:insecure_cipher_factory' failed: Worker process sent response with exit code: 1.
 jgit/src/org/eclipse/jgit/transport/InsecureCipherFactory.java:63: error: [InsecureCryptoUsage] Insecure usage of a crypto API: the transformation is not a compile-time constant expression.
                return Cipher.getInstance(algo);
                                         ^
    (see http://errorprone.info/bugpattern/InsecureCryptoUsage)

Change-Id: I7f9a3a5117e42cb68544674f5312df0368aa3674

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jonathan Nieder
Date: 2017-02-16 00:03:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2017-02-16 00:03:40.000000000
Message: 
Patch Set 1:

Build Started https://hudson.eclipse.org/jgit/job/jgit.gerrit/9821/
----------------------------------------------------------------------------------------------------------------------
Author: Jonathan Nieder
Date: 2017-02-16 00:04:07.000000000
Message: 
Patch Set 1: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2017-02-16 00:13:01.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

https://hudson.eclipse.org/jgit/job/jgit.gerrit/9821/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Zhen Chen
Date: 2017-02-16 00:13:19.000000000
Message: 
Patch Set 1: Code-Review+1
----------------------------------------------------------------------------------------------------------------------
Author: Jonathan Nieder
Date: 2017-02-16 00:14:14.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Gerrit Code Review
Date: 2017-02-16 00:14:18.000000000
Message: 
Change has been successfully merged into the git repository by Jonathan Nieder
----------------------------------------------------------------------------------------------------------------------
